--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   app:
-    container_name: ts-node-app-prod
-    build: 
+    container_name: consize-backend-prod
+    build:
       target: production
     command: yarn start
