--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -2,5 +2,5 @@ version: '3'
 
 services:
   app:
-    container_name: ts-node-app-test
+    container_name: consize-backend-test
     command: yarn test:js
