--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,3 +27,7 @@ jobs:
           command: |
             npm install
             npm run start:build
+workflows:
+  build_and_deploy_work:
+    jobs:
+      - build_and_deploy
