--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
       - checkout
       # SSH into the server
       - run:
+          name: Create .ssh directory
+          command: mkdir -p ~/.ssh
+      - run:
           name: Add server fingerprint
           command: echo '${SERVER_ADDRESS} ${SSH_PUBLIC_KEY}' >> ~/.ssh/known_hosts
       - run:
