--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,14 +9,8 @@ jobs:
       - checkout
       # SSH into the server
       - run:
-          name: Create .ssh directory
-          command: mkdir -p ~/.ssh
-      - run:
-          name: Add server fingerprint
-          command: echo '${SERVER_ADDRESS} ${SSH_PUBLIC_KEY}' >> ~/.ssh/known_hosts
-      - run:
           name: SSH into the server
-          command: ssh ${SSH_USERNAME}@${SERVER_ADDRESS}
+          command: ssh o StrictHostKeyChecking=no ${SSH_USERNAME}@${SERVER_ADDRESS}
 
       # Pull the latest changes from Git
       - run:
