--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       # SSH into the server
       - run:
           name: SSH into the server
-          command: ssh -o StrictHostKeyChecking=no ${SSH_USERNAME}@${SERVER_ADDRESS} "cd ~/consize-backend && git pull && npm i && npm run start:build"
+          command: ssh -o StrictHostKeyChecking=no ${SSH_USERNAME}@${SERVER_ADDRESS} "cd ~/consize-backend && git pull && /root/.nvm/versions/node/v18.19.1/bin/npm i && /root/.nvm/versions/node/v18.19.1/bin/npm run start:build"
 workflows:
   build_and_deploy_work:
     jobs:
