--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@ryansonshine/commitizen": "^4.2.8",
     "@ryansonshine/cz-conventional-changelog": "^3.3.4",
     "@types/bcryptjs": "^2.4.2",
+    "@types/busboy": "^1.5.3",
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "2.8.8",
@@ -107,10 +108,12 @@
     "wait-on": "^7.2.0"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.9.0",
     "@types/uuid": "^9.0.8",
     "agenda": "^5.0.0",
     "agendash": "^4.0.0",
     "bcryptjs": "^2.4.3",
+    "busboy": "^1.6.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
@@ -132,6 +135,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "pm2": "^5.1.2",
+    "puppeteer": "^22.6.1",
     "redis": "^4.6.13",
     "uuid": "^9.0.1",
     "validator": "^13.7.0",
