--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,3 +15,7 @@ workflows:
   build_and_deploy_work:
     jobs:
       - build_and_deploy
+          filters:
+              branches:
+                only:
+                  - main
