--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "start": "pm2 start ecosystem.config.json --no-daemon",
-    "start:build": "tsc --build && pm2 start ecosystem.config.json --no-daemon",
+    "start:build": "tsc --build && npm run templates && pm2 start ecosystem.config.json --no-daemon",
     "compile": "tsc --build",
     "compile:watch": "tsc --build --watch",
     "dev:debug": "node --inspect=5258 -r ts-node/register ./src/index.ts",
