--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.12",
     "@types/passport-jwt": "^3.0.6",
+    "@types/randomstring": "^1.3.0",
     "@types/supertest": "^2.0.11",
     "@types/validator": "^13.7.0",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
@@ -137,6 +138,7 @@
     "ncp": "^2.0.0",
     "node-mailjet": "^6.0.5",
     "nodemailer": "^6.7.2",
+    "openai": "^4.47.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "pm2": "^5.1.2",
