--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "pm2 start ecosystem.config.json --no-daemon",
     "start:build": "tsc --build && npm run templates && pm2 start ecosystem.config.json --no-daemon",
-    "compile": "tsc --build",
+    "compile": "tsc --build && npm run templates",
     "compile:watch": "tsc --build --watch",
     "templates": "rm -rf ./dist/modules/email/templates && cp -r ./src/modules/email/templates ./dist/modules/email/templates",
     "pre:dev:debug": "cross-env NODE_ENV=development nodemon --inspect=5258 --experimental-modules --es-module-specifier-resolution=node dist/index.js",
@@ -82,6 +82,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.12",
     "@types/passport-jwt": "^3.0.6",
+    "@types/randomstring": "^1.3.0",
     "@types/supertest": "^2.0.11",
     "@types/validator": "^13.7.0",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
