--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,17 @@ jobs:
       - run:
           name: SSH into the server
           command: ssh -o StrictHostKeyChecking=no -T ${SSH_USERNAME}@${SERVER_ADDRESS} "source ~/.nvm/nvm.sh; cd ~/consize-backend && git add . && git stash && git pull && /root/.nvm/versions/node/v18.19.1/bin/npm i && /root/.nvm/versions/node/v18.19.1/bin/npm run compile && /root/.nvm/versions/node/v18.19.1/bin/pm2 restart 0"
+
+  build_and_deploy_prod:
+    docker:
+      - image: circleci/node:14
+
+    steps:
+      - checkout
+      # SSH into the server
+      - run:
+          name: SSH into the server
+          command: ssh -o StrictHostKeyChecking=no -T ${SSH_USERNAME}@${SERVER_ADDRESS_PROD} "source ~/.nvm/nvm.sh; cd ~/consize-backend && git add . && git stash && git pull && /root/.nvm/versions/node/v18.19.1/bin/npm i && /root/.nvm/versions/node/v18.19.1/bin/npm run compile && /root/.nvm/versions/node/v18.19.1/bin/pm2 restart 0"
 workflows:
   build_and_deploy_work:
     jobs:
@@ -19,3 +30,8 @@ workflows:
             branches:
               only:
                 - main
+      - build_and_deploy_prod:
+          filters:
+            branches:
+              only:
+                - prod
