--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/cors": "2.8.8",
     "@types/express": "^4.17.13",
     "@types/express-rate-limit": "^5.1.3",
+    "@types/fluent-ffmpeg": "^2.1.24",
     "@types/he": "^1.2.3",
     "@types/jest": "^27.4.1",
     "@types/morgan": "^1.9.3",
@@ -126,6 +127,7 @@
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^5.5.1",
     "firebase-admin": "^12.0.0",
+    "fluent-ffmpeg": "^2.1.3",
     "he": "^1.2.0",
     "helmet": "^4.6.0",
     "http-status": "^1.5.0",
