--- a/package.json
+++ b/package.json
@@ -150,6 +150,7 @@
     "uuid": "^9.0.1",
     "validator": "^13.7.0",
     "winston": "^3.3.3",
+    "xlsx-js-style": "^1.2.0",
     "xss-clean": "^0.1.1"
   },
   "config": {
