--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "busboy": "^1.6.0",
+    "cheerio": "^1.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
