chore: completed custom domains

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "compile": "tsc --build && npm run templates",
     "compile:watch": "tsc --build --watch",
     "templates": "rm -rf ./dist/modules/email/templates && cp -r ./src/modules/email/templates ./dist/modules/email/templates",
-    "pre:dev:debug": "cross-env NODE_ENV=development nodemon --inspect=5258 --experimental-modules --es-module-specifier-resolution=node dist/index.js",
-    "pre:dev": "cross-env NODE_ENV=development nodemon --experimental-modules --es-module-specifier-resolution=node dist/index.js",
+    "pre:dev:debug": "cross-env nodemon --inspect=5258 --experimental-modules --es-module-specifier-resolution=node dist/index.js",
+    "pre:dev": "cross-env nodemon --experimental-modules --es-module-specifier-resolution=node dist/index.js",
     "dev": "concurrently --kill-others-on-fail \"yarn compile:watch\" \"yarn pre:dev\" \"yarn watch-email-templates\"",
     "dev:debug": "concurrently --kill-others-on-fail \"yarn compile:watch\" \"yarn pre:dev:debug\" \"yarn watch-email-templates\"",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest -i --colors --verbose --detectOpenHandles",
